# orkhon

./: .gitignore  .travis.yml  .travis.yml.bak  Cargo.toml  README.md  _CURRENT  prefix.py  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: bench_async_request_for_py_model.rs  bench_async_request_for_tf_loaded_py_model.rs  onnx_benches.rs
ci/: before_deploy.sh  script.sh
examples/: concurrent_onnx_model.rs  concurrent_tf_model.rs  onnx_model.rs  tf_model.rs
src/: api.rs  config.rs  dispatch.rs  errors.rs  lib.rs  onnx.rs  orkhon.rs  pooled.rs  preprocessing.rs  reqrep.rs  service.rs  service_macros.rs  tensorflow.rs
src/dispatch/: model.rs
src/pooled/: model.rs
testdata/: ordinal_encoder_data.json  ordinal_encoder_transformed.json
tests/: general.rs  lib.rs  reqrep.rs  test_async_request_for_dummy_py_model.rs  test_async_request_for_py_model.rs  test_async_request_for_tf_loaded_py_model.rs  test_async_request_for_tf_model.rs  test_mismatching_async_request_for_tf_model.rs  testasync.rs
tests/pymodels/: model_test.py  prefix.py  test_dict_based.py  tf_model.py
