[package]
name = "orkhon"
description = "Machine Learning Inference Framework and Server Runtime"
version = "0.1.0"
authors = [
    "Mahmut Bulut <vertexclique@gmail.com>",
    "Berkan Yavrı <yavrib@gmail.com>"
]
keywords = ["machine-learning", "framework", "inference", "prediction", "python-runtime"]
categories = ["science", "asynchronous", "api-bindings"]
homepage = "https://github.com/vertexclique/orkhon"
repository = "https://github.com/vertexclique/orkhon"
documentation = "https://docs.rs/orkhon"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "vertexclique/orkhon", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
bytes = "0.4"
error-chain = "0.12.1"

# Backend dependencies
pyo3 = "0.7.0-alpha.1"
tract-core = "0.3.3"
tract-tensorflow = "0.3.3"
smallvec = "0.6.9"

# hahahahahahha, hahah, hah, (ノಠ益ಠ)ノ彡┻━┻
futures-preview = "0.3.0-alpha.16"

[dev-dependencies]
runtime = "0.3.0-alpha.4"
runtime-tokio = "0.3.0-alpha.3"
static_assertions = "0.3.2"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]
