[package]
name = "orkhon"
description = "Machine Learning Inference Framework and Server Runtime"
version = "0.1.0"
authors = [
    "Mahmut Bulut <vertexclique@gmail.com>"
]
keywords = ["machine-learning", "framework", "inference", "prediction", "python-runtime"]
categories = ["science", "asynchronous", "api-bindings"]
homepage = "https://github.com/vertexclique/orkhon"
repository = "https://github.com/vertexclique/orkhon"
documentation = "https://docs.rs/orkhon"
readme = "README.md"
license = "MIT"
edition = "2018"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[badges]
travis-ci = { repository = "vertexclique/orkhon", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
bytes = "0.4"
thiserror = "1.0"

# Backend dependencies
pyo3 = "0.12"
tract-core = "0.11"
tract-tensorflow = "0.11"
smallvec = "1.4"
futures = "0.3"

[dev-dependencies]
nuclei = "0.1.2-alpha.1"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
