[package]
name = "orkhon"
description = "Machine Learning Inference Framework and Server Runtime"
version = "0.2.3-alpha.1"
authors = [
    "Mahmut Bulut <vertexclique@gmail.com>"
]
keywords = ["machine-learning", "framework", "inference", "prediction", "python-runtime"]
categories = ["science", "asynchronous", "api-bindings"]
homepage = "https://github.com/vertexclique/orkhon"
repository = "https://github.com/vertexclique/orkhon"
documentation = "https://docs.rs/orkhon"
readme = "README.md"
license = "MIT"
edition = "2018"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"ci/*",
	"benches/*",
	"testdata/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[badges]
travis-ci = { repository = "vertexclique/orkhon", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["onnxmodel"]
tfmodel = ["tract-tensorflow"]
onnxmodel = ["tract-onnx"]
pymodel = ["pyo3"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.6"
env_logger = "0.6.1"
thiserror = "1.0"
lever = "0.1.1-alpha.11"

# Backend dependencies
pyo3 = { version = "0.12", optional = true }
tract-core = "0.12"
tract-tensorflow = { version = "0.12", features = ["conform"], optional = true }
tract-onnx = { version = "0.12", optional = true }
smallvec = "1.4"
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
nuclei = "0.1.2-alpha.1"
rand = "0.7.3"
rayon = "1.5"
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[[bench]]
name = "onnx_benches"
path = "benches/onnx_benches.rs"
harness = false

#orkhon = { path = "../../orkhon", features = ["onnxmodel"] }
